Add support for fsimx8mp BT070L1060CS0I1ADA display
Add support for picocoremx8mp efusmx8mp and armstonemx8mp.
Todo Add support for fssmmx8mp

--- a/arch/arm64/boot/dts/F+S/armstonemx8mp.dts
+++ b/arch/arm64/boot/dts/F+S/armstonemx8mp.dts
@@ -44,7 +44,12 @@
  * F&S has changed the default LVDS display. To use the previous settings
  * activate the following define.
  */
-#define DISPLAY_LVDS_J070WVTC0211
+#define DISPLAY_LVDS_BT070L1060CS0I1ADA
+
+/*
+ * Enables legacy support for J070WVTC0211
+ */
+//#define DISPLAY_LVDS_J070WVTC0211
 
 /* Enables support for AUO G133HAN01.0 - 19:9 FHD, 1920(H)x1080(V) panel */
 //#define DISPLAY_LVDS_G133HAN010
@@ -65,6 +70,28 @@
  * - "jeida": only 24 bpp, bits 6 and 7 of each color are interleaved with
  *            all other data bits on all four differential data pairs
  */
+#ifdef DISPLAY_LVDS_BT070L1060CS0I1ADA
+#define CONFIG_ARMSTONEMX8MP_LVDS1_CHANNEL_MAPPING	"spwg"
+#define CONFIG_ARMSTONEMX8MP_LVDS1_CHANNEL_DATA_WIDTH	24
+
+#define CONFIG_ARMSTONEMX8MP_LVDS1_PANEL_MAPPING	"vesa-24"
+#define CONFIG_ARMSTONEMX8MP_LVDS1_PANEL_LABEL	"BT070L1060CS0I1AD-A"
+#define CONFIG_ARMSTONEMX8MP_LVDS1_PANEL_WIDTH	154
+#define CONFIG_ARMSTONEMX8MP_LVDS1_PANEL_HEIGHT	86
+#define CONFIG_ARMSTONEMX8MP_LVDS1_PANEL_TIMING \
+	clock-frequency = <49500000>; \
+	hactive = <1024>; \
+	vactive = <600>; \
+	hback-porch = <160>; \
+	hfront-porch = <76>; \
+	hsync-len = <140>; \
+	vback-porch = <23>; \
+	vfront-porch = <107>; \
+	vsync-len = <20>; \
+	pixelclk-active = <0>; \
+	de-active = <1>;
+#endif /* DISPLAY_LVDS_BT070L1060CS0I1ADA */
+
 #ifdef DISPLAY_LVDS_J070WVTC0211
 #define CONFIG_ARMSTONEMX8MP_LVDS1_CHANNEL_MAPPING	"spwg"
 #define CONFIG_ARMSTONEMX8MP_LVDS1_CHANNEL_DATA_WIDTH	24
@@ -107,15 +134,19 @@
 	vfront-porch = <11>;	\
 	vsync-len = <1>;	\
 	pixelclk-active = <0>;
-#endif
+#endif /* DISPLAY_LVDS_G133HAN010 */
 
 /*
  * Configure touch screen:
  *
  * - PCAP touch based on Focaltech controller (FT5x26), on Touch Connector
+ * - PCAP touch based on ILITEK (Ilitek2130), on ADP-LVDS2LVDS1
  *
  * Select none if you do not need touch support.
  */
+#ifdef DISPLAY_LVDS_BT070L1060CS0I1ADA
+#define CONFIG_ARMSTONEMX8MP_CAPTOUCH_ILITEK
+#endif
 #ifdef DISPLAY_LVDS_J070WVTC0211
 #define CONFIG_ARMSTONEMX8MP_CAPTOUCH_FT5x26
 #define CONFIG_ARMSTONEMX8MP_CAPTOUCH_FT5x26_INVERTED_XY
@@ -221,6 +252,18 @@
 	board_name = "armstonemx8mp";
 };
 
+#ifdef DISPLAY_LVDS_BT070L1060CS0I1ADA
+&reg_ldb_bl{
+	gpio = <&pca963x 0 GPIO_ACTIVE_HIGH>;
+};
+
+&backlight_ldb {
+	pwms = <&pca963x 1 5263157 1>;
+	brightness-levels = <0 1 5 10 18 28 41 56
+                        73 92 113 137 163 192 222 255>;
+	default-brightness-level = <14>;
+};
+#endif
 #ifdef DISPLAY_LVDS_J070WVTC0211
 &backlight_ldb {
 	pwms = <&pwm3 0 250000 PWM_POLARITY_INVERTED>;
