--- a/arch/arm64/boot/dts/F+S/efusmx8mp.dts
+++ b/arch/arm64/boot/dts/F+S/efusmx8mp.dts
@@ -43,6 +43,11 @@
  * F&S has changed the default LVDS display. To use the previous settings
  * activate the following define.
  */
+//#define DISPLAY_LVDS_BT070L1060CS0I1ADA
+
+ /*
+  * Enables legacy support for J070WVTC0211
+  */
 #define DISPLAY_LVDS_J070WVTC0211
 
 /* Enables support for AUO G133HAN01.0 - 19:9 FHD, 1920(H)x1080(V) panel */
@@ -67,6 +72,64 @@
  * - "jeida": only 24 bpp, bits 6 and 7 of each color are interleaved with
  *            all other data bits on all four differential data pairs
  */
+#ifdef DISPLAY_LVDS_BT070L1060CS0I1ADA
+
+#if ((CONFIG_EFUSMX8MP_PANEL0 == DISPLAY_LVDS1) \
+	|| (CONFIG_EFUSMX8MP_PANEL1 == DISPLAY_LVDS1))
+#define CONFIG_EFUSMX8MP_LVDS1_CHANNEL_MAPPING	"spwg"
+#define CONFIG_EFUSMX8MP_LVDS1_CHANNEL_DATA_WIDTH	24
+
+#define CONFIG_EFUSMX8MP_LVDS1_PANEL_MAPPING	"vesa-24"
+#define CONFIG_EFUSMX8MP_LVDS1_PANEL_LABEL	"BT070L1060CS0I1AD-A"
+#define CONFIG_EFUSMX8MP_LVDS1_PANEL_WIDTH	154
+#define CONFIG_EFUSMX8MP_LVDS1_PANEL_HEIGHT	86
+#define CONFIG_EFUSMX8MP_LVDS1_PANEL_TIMING \
+	clock-frequency = <49500000>; \
+		hactive = <1024>; \
+		vactive = <600>; \
+		hback-porch = <160>; \
+		hfront-porch = <76>; \
+		hsync-len = <140>; \
+		vback-porch = <23>; \
+		vfront-porch = <107>; \
+		vsync-len = <20>; \
+		pixelclk-active = <0>; \
+		de-active = <1>;
+#endif
+
+#if ((CONFIG_EFUSMX8MP_PANEL0 == DISPLAY_LVDS0) \
+	|| (CONFIG_EFUSMX8MP_PANEL1 == DISPLAY_LVDS0))
+#define CONFIG_EFUSMX8MP_LVDS0_CHANNEL_MAPPING	"spwg"
+#define CONFIG_EFUSMX8MP_LVDS0_CHANNEL_DATA_WIDTH	24
+
+#define CONFIG_EFUSMX8MP_LVDS0_PANEL_MAPPING	"vesa-24"
+#define CONFIG_EFUSMX8MP_LVDS0_PANEL_LABEL	"BT070L1060CS0I1AD-A"
+#define CONFIG_EFUSMX8MP_LVDS0_PANEL_WIDTH	154
+#define CONFIG_EFUSMX8MP_LVDS0_PANEL_HEIGHT	86
+#define CONFIG_EFUSMX8MP_LVDS0_PANEL_TIMING \
+	clock-frequency = <49500000>; \
+		hactive = <1024>; \
+		vactive = <600>; \
+		hback-porch = <160>; \
+		hfront-porch = <76>; \
+		hsync-len = <140>; \
+		vback-porch = <23>; \
+		vfront-porch = <107>; \
+		vsync-len = <20>; \
+		pixelclk-active = <0>; \
+		de-active = <1>;
+#endif
+
+/* G133HAN010 can't be configured together with another Display
+ * because G133HAN010 has 8 lanes support.
+*/
+#ifdef DISPLAY_LVDS_G133HAN010
+#warning "Undefine  DISPLAY_LVDS_G133HAN010 because of other DISPLAY_LVDS_* configuration!"
+#undef DISPLAY_LVDS_G133HAN010
+#endif
+
+#endif /* DISPLAY_LVDS_BT070L1060CS0I1ADA */
+
 #ifdef DISPLAY_LVDS_J070WVTC0211
 
 #if ((CONFIG_EFUSMX8MP_PANEL0 == DISPLAY_LVDS1) \
@@ -117,11 +180,11 @@
 	hsync-active = <1>;
 #endif
 
-/* J070WVTC0211 and G133HAN010 can't be configured together
+/* G133HAN010 can't be configured together with another Display
  * because G133HAN010 has 8 lanes support.
 */
 #ifdef DISPLAY_LVDS_G133HAN010
-#warning "Undefine  DISPLAY_LVDS_G133HAN010 because of DISPLAY_LVDS_J070WVTC0211 configuration!"
+#warning "Undefine  DISPLAY_LVDS_G133HAN010 because of other DISPLAY_LVDS_* configuration!"
 #undef DISPLAY_LVDS_G133HAN010
 #endif
 
@@ -152,9 +215,12 @@
  * Configure touch screen:
  *
  * - PCAP touch based on Focaltech controller (FT5x26), on Touch Connector
- *
+ * - PCAP touch based on ILITEK (Ilitek2130), on ADP-LVDS2LVDS1
  * Select none if you do not need touch support.
  */
+#ifdef DISPLAY_LVDS_BT070L1060CS0I1ADA
+#define CONFIG_EFUSMX8MP_CAPTOUCH_ILITEK
+#endif
 #ifdef DISPLAY_LVDS_J070WVTC0211
 #define CONFIG_EFUSMX8MP_CAPTOUCH_FT5x26
 #define CONFIG_EFUSMX8MP_CAPTOUCH_FT5x26_INVERTED_XY
@@ -270,6 +336,19 @@
 &bdinfo {
 	board_name = "efusmx8mp";
 };
+
+#ifdef DISPLAY_LVDS_BT070L1060CS0I1ADA
+&reg_ldb_bl{
+	gpio = <&pca9634 0 GPIO_ACTIVE_HIGH>;
+};
+
+&backlight_ldb {
+	pwms = <&pca9634 1 5263157 1>;
+	brightness-levels = <0 1 5 10 18 28 41 56
+                        73 92 113 137 163 192 222 255>;
+	default-brightness-level = <14>;
+};
+#endif
 
 #ifdef DISPLAY_LVDS_J070WVTC0211
 &backlight_ldb {
