--- a/arch/arm64/boot/dts/F+S/efusmx8mp.dtsi
+++ b/arch/arm64/boot/dts/F+S/efusmx8mp.dtsi
@@ -298,6 +298,9 @@
 		label = CONFIG_EFUSMX8MP_LVDS0_PANEL_LABEL;
 		width-mm = <CONFIG_EFUSMX8MP_LVDS0_PANEL_WIDTH>;
 		height-mm = <CONFIG_EFUSMX8MP_LVDS0_PANEL_HEIGHT>;
+#ifdef DISPLAY_LVDS_BT070L1060CS0I1ADA
+		reset-gpios = <&pca9634 3 GPIO_ACTIVE_LOW>;
+#endif
 		status = "okay";
 
 		panel-timing {
@@ -321,6 +324,9 @@
 		label = CONFIG_EFUSMX8MP_LVDS1_PANEL_LABEL;
 		width-mm = <CONFIG_EFUSMX8MP_LVDS1_PANEL_WIDTH>;
 		height-mm = <CONFIG_EFUSMX8MP_LVDS1_PANEL_HEIGHT>;
+#ifdef DISPLAY_LVDS_BT070L1060CS0I1ADA
+		reset-gpios = <&pca9634 3 GPIO_ACTIVE_LOW>;
+#endif
 		status = "okay";
 
 		panel-timing {
@@ -595,10 +601,84 @@
 
 /* J2 LVDS connector -  I2C_LVDS pins 25,27 */
 &i2c2 {
-	clock-frequency = <100000>;
+	clock-frequency = <400000>;
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_i2c2>;
 	status = "okay";
+
+#ifdef CONFIG_EFUSMX8MP_CAPTOUCH_ILITEK
+touch: ilitek2130@41 {
+        compatible = "ilitek,ili2130";
+        reg = <0x41>;
+        interrupt-parent = <&gpio3>;
+        interrupts = <15 IRQ_TYPE_EDGE_RISING>;
+        reset-gpios = <&pca9634 5 GPIO_ACTIVE_LOW>;
+        };
+#endif
+#ifdef DISPLAY_LVDS_BT070L1060CS0I1ADA
+pca9634: pca9634@61 {
+    	compatible = "nxp,pca9634";
+        reg = <0x61>;
+		vdd-supply = <&reg_vlcd>;
+		#address-cells = <1>;
+		#size-cells = <0>;
+		#pwm-cells = <3>;
+		#gpio-cells = <2>;
+		led@0 {
+				reg = <0>;
+				label = "BL_ON";
+				type = "GPIO";
+				default-on;             /* or: keep-value */
+				active-high;
+		};
+		led@1 {
+				reg = <1>;
+				label = "BL_PWM";
+				type = "PWM";
+				default-on;             /* or: keep-value */
+				active-low;
+		};
+		led@2 {
+				reg = <2>;
+				label = "2-unused";
+				type = "LED";
+				active-low;
+		};
+		led@3 {
+				reg = <3>;
+				label = "MIPI_RST";
+				type = "GPIO";
+				active-low;
+				default-on;             /* or: keep-value */
+		};
+		led@4 {
+				reg = <4>;
+				label = "4-unused";
+				type = "LED";
+				active-low;
+		};
+		led@5 {
+				reg = <5>;
+				label = "I2C_RST";
+				type = "GPIO";
+				active-high;
+				default-on;             /* or: keep-value */
+		};
+		led@6 {
+				reg = <6>;
+				label = "6-unused";
+				type = "LED";
+				active-low;
+		};
+		led@7 {
+				reg = <7>;
+				label = "TOUCH_ON";
+				type = "GPIO";
+				active-high;
+				default-on;
+		};
+    };
+#endif	/* DISPLAY_LVDS_BT070L1060CS0I1ADA */
 };
 
 #ifdef CONFIG_EFUSMX8MP_I2C_A
