--- a/arch/arm64/boot/dts/F+S/fs-gal1.dts
+++ b/arch/arm64/boot/dts/F+S/fs-gal1.dts
@@ -53,48 +53,61 @@
 	leds {
 		compatible = "gpio-leds";
 
-		D4-GN {
+		D4_GN {
 			label = "D4-LED_green";
 			gpios = <&gpio4 4 GPIO_ACTIVE_HIGH>;
 			default-state = "off";	
 		};
 
-		D5-GN {
+		D5_GN {
 			label = "D5-LED_green";
 			gpios = <&gpio4 5 GPIO_ACTIVE_HIGH>;
 			default-state = "off";
 		};
 
-		D6-RD {
+		D6_RD {
 			label = "D6-LED_red";
 			gpios = <&gpio4 6 GPIO_ACTIVE_HIGH>;
 			default-state = "off";
 		};
 
-		D6-GN {
+		D6_GN {
 			label = "D6-LED_green";
 			gpios = <&gpio4 7 GPIO_ACTIVE_HIGH>;
 			default-state = "off";
 		};
 
-		D7-RD {
+		D7_RD {
 			label = "D7-LED_red";
 			gpios = <&gpio4 8 GPIO_ACTIVE_HIGH>;
 			default-state = "off";
 		};
 
-		D7-GN {
+		D7_GN {
 			label = "D7-LED_green";
 			gpios = <&gpio4 9 GPIO_ACTIVE_HIGH>;
 			default-state = "off";
 		};
 
-		D7-BL {
+		D7_BL {
 			label = "D7-LED_blue";
 			gpios = <&gpio4 10 GPIO_ACTIVE_HIGH>;
 			default-state = "off";
 		};
 
+		D24_SFP_EXT_LINK {
+			label = "SFP_EXT_LINK";
+			linux,default-trigger = "netdev";
+			gpios = <&gpio1 15 GPIO_ACTIVE_HIGH>;
+			default-state = "off";
+		};
+
+		SFP_INT_LINK {
+			label = "SFP_INT_LINK";
+			linux,default-trigger = "netdev";
+			gpios = <&gpio4 23 GPIO_ACTIVE_HIGH>;
+			default-state = "off";
+		};
 	};
 
 	regulators {
@@ -402,7 +415,6 @@
 	phy-connection-type = "sgmii";
 	managed = "in-band-status";
 	sfp = <&sfp_ext>;
-	link-gpios = <&gpio1 15 GPIO_ACTIVE_HIGH>;
 	status = "okay";
 };
 
@@ -411,7 +423,6 @@
 	label = "eth3";
 	phy-handle = <&rgmii_phy0>;
 	phy-mode = "rgmii-id";
-	link-gpios = <&gpio4 23 GPIO_ACTIVE_HIGH>;
 	status = "okay";
 };
 
