--- a/arch/arm64/boot/dts/freescale/imx93.dtsi
+++ b/arch/arm64/boot/dts/freescale/imx93.dtsi
@@ -157,7 +157,7 @@
 					hysteresis = <2000>;
 					type = "critical";
 				};
-		};
+			};
 
 			cooling-maps {
 				map0 {
@@ -356,6 +356,8 @@
 				interrupts = <GIC_SPI 19 IRQ_TYPE_LEVEL_HIGH>;
 				clocks = <&clk IMX93_CLK_LPUART1_GATE>;
 				clock-names = "ipg";
+				dmas = <&edma1 16 0 0>, <&edma1 17 0 1>;
+				dma-names = "tx","rx";
 				status = "disabled";
 			};
 
@@ -686,11 +688,55 @@
 				fsl,ext-reset-output;
 			};
 
+			tpm1: pwm@44310000 {
+				compatible = "fsl,imx7ulp-pwm";
+				reg = <0x44310000 0x1000>;
+				clocks = <&clk IMX93_CLK_TPM1_GATE>;
+				assigned-clocks = <&clk IMX93_CLK_TPM1>;
+				assigned-clock-parents = <&clk IMX93_CLK_BUS_AON>;
+				assigned-clock-rates = <40000000>;
+				#pwm-cells = <3>;
+				status = "disabled";
+			};
+
+			tpm3: pwm@424e0000 {
+				compatible = "fsl,imx7ulp-pwm";
+				reg = <0x424e0000 0x1000>;
+				clocks = <&clk IMX93_CLK_TPM3_GATE>;
+				assigned-clocks = <&clk IMX93_CLK_TPM3>;
+				assigned-clock-parents = <&clk IMX93_CLK_BUS_WAKEUP>;
+				assigned-clock-rates = <133333334>;
+				#pwm-cells = <3>;
+				status = "disabled";
+			};
+
 			tpm4: pwm@424f0000 {
 				compatible = "fsl,imx7ulp-pwm";
 				reg = <0x424f0000 0x1000>;
 				clocks = <&clk IMX93_CLK_TPM4_GATE>;
 				assigned-clocks = <&clk IMX93_CLK_TPM4>;
+				assigned-clock-parents = <&clk IMX93_CLK_24M>;
+				assigned-clock-rates = <24000000>;
+				#pwm-cells = <3>;
+				status = "disabled";
+			};
+
+			tpm5: pwm@42500000 {
+				compatible = "fsl,imx7ulp-pwm";
+				reg = <0x42500000 0x1000>;
+				clocks = <&clk IMX93_CLK_TPM5_GATE>;
+				assigned-clocks = <&clk IMX93_CLK_TPM5>;
+				assigned-clock-parents = <&clk IMX93_CLK_24M>;
+				assigned-clock-rates = <24000000>;
+				#pwm-cells = <3>;
+				status = "disabled";
+			};
+
+			tpm6: pwm@42510000 {
+				compatible = "fsl,imx7ulp-pwm";
+				reg = <0x42510000 0x1000>;
+				clocks = <&clk IMX93_CLK_TPM6_GATE>;
+				assigned-clocks = <&clk IMX93_CLK_TPM6>;
 				assigned-clock-parents = <&clk IMX93_CLK_24M>;
 				assigned-clock-rates = <24000000>;
 				#pwm-cells = <3>;
@@ -1438,6 +1484,8 @@
 		};
 
 		dsi: dsi@4ae10000 {
+			#address-cells = <1>;
+			#size-cells = <0>;
 			compatible = "fsl,imx93-mipi-dsi";
 			reg = <0x4ae10000 0x4000>;
 			interrupts = <GIC_SPI 177 IRQ_TYPE_LEVEL_HIGH>;
