char: Add bdinfo driver
Add bdinfo driver. Backported the driver
from f+s 5.15 branch.

--- a/drivers/char/Kconfig
+++ b/drivers/char/Kconfig
@@ -31,6 +31,16 @@ config TTY_PRINTK_LEVEL
 	help
 	  Printk log level to use for ttyprintk messages.
 
+config BDINFO
+	bool "Support F&S Board Information System (/sys/bdinfo)"
+	default n
+	help
+	  The Board Information System reads board specific data and presents
+	  it in a subdirectory of /sys.
+
+	  If you are not using a board or module from F&S Elektronik Systeme,
+	  you can safely say N.
+
 config PRINTER
 	tristate "Parallel printer support"
 	depends on PARPORT
