dts:F+S:picocoremx93: complete BT070L1060CS0I1AD-A for ADP-LVDS2LVDS1
include nodes for gpio driver on ADP-LVDS2LVDS1.
set hsync-len = <10>;
set vfront-porch = <12>;

The new Values for hsync-len and vfront-porch will improve flickering.

--- a/arch/arm64/boot/dts/F+S/displays/imx93-BT070L1060CS0I1AD-A.dtsi
+++ b/arch/arm64/boot/dts/F+S/displays/imx93-BT070L1060CS0I1AD-A.dtsi
@@ -7,35 +7,35 @@
  */
 
 / {
-        lvds_panel {
-                compatible = "panel-lvds";
-                power-supply = <&reg_vlcd>;
-                backlight = <&backlight_ldb>;
-                data-mapping = "vesa-24";
-                label = "BT070L1060CS0I1AD-A";
-                width-mm = <155>;
-                height-mm = <86>;
-                status = "okay";
+	lvds_panel {
+		compatible = "panel-lvds";
+		backlight = <&backlight_ldb>;
+		reset-gpios = <&gpio_adp 3 GPIO_ACTIVE_LOW>;
+		data-mapping = "vesa-24";
+		label = "BT070L1060CS0I1AD-A";
+		width-mm = <155>;
+		height-mm = <86>;
+		status = "okay";
 
-                panel-timing {
-                        clock-frequency = <49500000>;
-                        hactive = <1024>;
-                        vactive = <600>;
-                        hback-porch = <160>;
-                        hfront-porch = <76>;
-                        hsync-len = <140>;
-                        vback-porch = <23>;
-                        vfront-porch = <107>;
-                        vsync-len = <20>;
-                        pixelclk-active = <0>;
-                        de-active = <1>;
-                };
-                port {
-                        panel_lvds_in: endpoint {
-                                remote-endpoint = <&lvds_out>;
-                        };
-                };
-        };
+		panel-timing {
+			clock-frequency = <49500000>;
+			hactive = <1024>;
+			vactive = <600>;
+			hback-porch = <160>;
+			hfront-porch = <76>;
+			hsync-len = <10>;
+			vback-porch = <23>;
+			vfront-porch = <12>;
+			vsync-len = <20>;
+			pixelclk-active = <0>;
+			de-active = <1>;
+		};
+		port {
+			panel_lvds_in: endpoint {
+				remote-endpoint = <&lvds_out>;
+			};
+		};
+	};
 };
 
 &reg_bl_on {
@@ -47,13 +47,20 @@
 };
 
 &backlight_ldb {
-	status = "okay";
+	pwms = <&gpio_adp 1 5263157 1>;
+	brightness-levels = <0 1 5 10 18 28 41 56
+				 73 92 113 137 163 192 222 255>;
+	default-brightness-level = <14>;
+};
+
+&reg_bl_on{
+	gpio = <&gpio_adp 0 GPIO_ACTIVE_HIGH>;
 };
 
 /* LVDS */
 &lcdif {
 	status = "okay";
-        assigned-clock-rates = <1039500000>, <49500000>, <400000000>, <133333333>;
+	assigned-clock-rates = <1039500000>, <49500000>, <400000000>, <133333333>;
 };
 
 &ldb_phy {
@@ -66,7 +73,7 @@
 		fsl,data-mapping = "spwg";
 		fsl,data-width = <24>;
 		status = "okay";
-                port@1 {
+		port@1 {
 			reg = <1>;
 
 			lvds_out: endpoint {
@@ -77,12 +84,75 @@
 };
 
 &IMX93_TOUCH_I2C {
-        /* Ilitek PCAP touch on Touch-Connector (I2C) */
-        touch: ilitek2130@41 {
-                compatible = "ilitek,ili2130";
-                reg = <0x41>;
-                interrupt-parent = <&IMX93_TOUCH_INTERRUPT_GPIO_BANK>;
-                interrupts = <IMX93_TOUCH_INTERRUPT_GPIO_NUM IRQ_TYPE_EDGE_RISING>;
-                reset-gpios = <&gpio2 19 GPIO_ACTIVE_LOW>;
-        };
+	gpio_adp: pca9634@61 {
+		compatible = "nxp,pca9634";
+		reg = <0x61>;
+		vdd-supply = <&reg_vlcd>;
+		#address-cells = <1>;
+		#size-cells = <0>;
+		#pwm-cells = <3>;
+		#gpio-cells = <2>;
+		led@0 {
+			reg = <0>;
+			label = "BL_ON";
+			type = "GPIO";
+			default-on;		/* or: keep-value */
+			active-high;
+		};
+		led@1 {
+			reg = <1>;
+			label = "BL_PWM";
+			type = "PWM";
+			default-on;	     /* or: keep-value */
+			active-low;
+		};
+		led@2 {
+			reg = <2>;
+			label = "2-unused";
+			type = "LED";
+			active-low;
+		};
+		led@3 {
+			reg = <3>;
+			label = "MIPI_RST";
+			type = "GPIO";
+			active-low;
+			default-on;	     /* or: keep-value */
+		};
+		led@4 {
+			reg = <4>;
+			label = "4-unused";
+			type = "LED";
+			active-low;
+		};
+		led@5 {
+			reg = <5>;
+			label = "I2C_RST";
+			type = "GPIO";
+			active-high;
+			default-on;     /* or: keep-value */
+		};
+		led@6 {
+			reg = <6>;
+			label = "6-unused";
+			type = "LED";
+			active-low;
+		};
+		led@7 {
+			reg = <7>;
+			label = "TOUCH_ON";
+			type = "GPIO";
+			active-high;
+			default-on;
+		};
+	};
+
+	/* Ilitek PCAP touch on Touch-Connector (I2C) */
+	touch: ilitek2130@41 {
+		compatible = "ilitek,ili2130";
+		reg = <0x41>;
+		interrupt-parent = <&IMX93_TOUCH_INTERRUPT_GPIO_BANK>;
+		interrupts = <IMX93_TOUCH_INTERRUPT_GPIO_NUM IRQ_TYPE_EDGE_RISING>;
+		reset-gpios = <&gpio2 19 GPIO_ACTIVE_LOW>;
+	};
 };
