--- a/arch/arm/boot/dts/picocoremx6ul100.dts
+++ b/arch/arm/boot/dts/picocoremx6ul100.dts
@@ -35,6 +35,12 @@
  */
 #define CONFIG_PICOCOREMX6UL100_LCDIF0		DISPLAY_LVDS
 
+#define DISPLAY_LVDS_BT070L1060CS0I1ADA
+/*
+ * Enables legacy support for J070WVTC0211
+ */
+//#define DISPLAY_LVDS_J070WVTC0211
+
 #if (CONFIG_PICOCOREMX6UL100_LCDIF0 == DISPLAY_LCD)
 /* 24 bit LCD signals are possible but then some gpios like touch reset
  * and bl pwm are not available in revision 1.00.
@@ -66,6 +72,27 @@ wvga {					\
 	pixelclk-active = <1>;		\
 }
 #elif (CONFIG_PICOCOREMX6UL100_LCDIF0 == DISPLAY_LVDS)
+
+#ifdef DISPLAY_LVDS_BT070L1060CS0I1ADA
+#define CONFIG_PICOCOREMX6UL100_LCD_BPP		32
+#define CONFIG_PICOCOREMX6UL100_LCD_BUS_WIDTH	18
+#define CONFIG_PICOCOREMX6UL100_LCD_TIMING \
+wvga {					\
+	clock-frequency = <49500000>; \
+	hactive = <1024>; \
+	vactive = <600>; \
+	hback-porch = <160>; \
+	hfront-porch = <76>; \
+	hsync-len = <140>; \
+	vback-porch = <23>; \
+	vfront-porch = <107>; \
+	vsync-len = <20>; \
+	pixelclk-active = <0>; \
+	de-active = <1>; \
+}
+#endif /* DISPLAY_LVDS_BT070L1060CS0I1ADA */
+
+#ifdef DISPLAY_LVDS_J070WVTC0211
 #define CONFIG_PICOCOREMX6UL100_LCD_BPP		32
 #define CONFIG_PICOCOREMX6UL100_LCD_BUS_WIDTH	18
 #define CONFIG_PICOCOREMX6UL100_LCD_TIMING \
@@ -84,6 +111,7 @@ wvga {					\
 	de-active = <1>;		\
 	pixelclk-active = <0>;		\
 }
+#endif /* DISPLAY_LVDS_J070WVTC0211 */
 #endif
 /*
  * Configure touch screen:
@@ -98,7 +126,7 @@ wvga {					\
  * select more than one entry! Select none if you do not need touch support.
  */
 //#define CONFIG_PICOCOREMX6UL100_CAPTOUCH_MXT224
-#define CONFIG_PICOCOREMX6UL100_CAPTOUCH_FT5x06
+//#define CONFIG_PICOCOREMX6UL100_CAPTOUCH_FT5x06
 //#define CONFIG_PICOCOREMX6UL100_CAPTOUCH_SITRONIX
 //#define CONFIG_PICOCOREMX6UL100_CAPTOUCH_ILITEK
 //#define CONFIG_PICOCOREMX6UL100_CAPTOUCH_TSC2004
@@ -241,10 +269,16 @@ wvga {					\
 	backlight_ldb {
 		compatible = "pwm-backlight";
 		power-supply = <&reg_ldb_bl>;
-
+#ifdef DISPLAY_LVDS_J070WVTC0211
 		pwms = <&pwm7 0 250000 PWM_POLARITY_INVERTED>;
 		brightness-levels = <135 143 151 159 167 175 183 191
 				     199 207 215 223 231 239 247 255>;
+#endif
+#ifdef DISPLAY_LVDS_BT070L1060CS0I1ADA
+		pwms = <&pca963x 1 5263157 1>;
+		brightness-levels = <0 1 5 10 18 28 41 56
+	                        73 92 113 137 163 192 222 255>;
+#endif
 		default-brightness-level = <14>;
 		fb-names = "mxs-lcdif";
 	};
@@ -299,7 +333,15 @@ wvga {					\
 			enable-active-high;
 		};
 #endif
-
+#ifdef DISPLAY_LVDS_BT070L1060CS0I1ADA
+		/* RESET */
+		reg_rlcd: regulator_rlcd {
+			compatible = "regulator-fixed";
+			regulator-name = "rlcd";
+			gpio = <&pca963x 3 1>;
+			enable-active-high;
+		};
+#endif
 #ifdef CONFIG_PICOCOREMX6UL100_BL_CTRL
 #if (CONFIG_PICOCOREMX6UL100_LCDIF0 == DISPLAY_LCD)
 		reg_lcd_bl: lcd-bl {
@@ -315,7 +357,11 @@ wvga {					\
 		reg_ldb_bl: ldb-bl {
 			compatible = "regulator-fixed";
 			regulator-name = "ldb-bl";
+#ifdef DISPLAY_LVDS_BT070L1060CS0I1ADA
+			gpio = <&pca963x 0 GPIO_ACTIVE_HIGH>;
+#else
 			gpio = <&gpio5 4 GPIO_ACTIVE_HIGH>;
+#endif
 			regulator-min-microvolt = <3300000>;
 			regulator-max-microvolt = <3300000>;
 			enable-active-high;
@@ -718,6 +764,80 @@ wvga {					\
 	};
 #endif
 
+#ifdef DISPLAY_LVDS_BT070L1060CS0I1ADA
+	clock-frequency = <400000>;
+	ilitek2130@41 {
+        compatible = "ilitek,ili2130";
+        reg = <0x41>;
+        interrupt-parent = <&gpio1>;
+        interrupts = <1 IRQ_TYPE_EDGE_RISING>;
+        reset-gpios = <&pca963x 5 GPIO_ACTIVE_LOW>;
+        };
+
+	pca963x: pca9634@61 {
+    	compatible = "nxp,pca9634";
+        reg = <0x61>;
+		vdd-supply = <&reg_vlcd>;
+		#address-cells = <1>;
+		#size-cells = <0>;
+		#pwm-cells = <3>;
+		#gpio-cells = <2>;
+		led@0 {
+				reg = <0>;
+				label = "BL_ON";
+				type = "GPIO";
+				default-on;             /* or: keep-value */
+				active-high;
+		};
+		led@1 {
+				reg = <1>;
+				label = "BL_PWM";
+				type = "PWM";
+				default-on;             /* or: keep-value */
+				active-low;
+		};
+		led@2 {
+				reg = <2>;
+				label = "2-unused";
+				type = "LED";
+				active-low;
+		};
+		led@3 {
+				reg = <3>;
+				label = "MIPI_RST";
+				type = "GPIO";
+				active-high;
+				default-on;             /* or: keep-value */
+		};
+		led@4 {
+				reg = <4>;
+				label = "4-unused";
+				type = "LED";
+				active-low;
+		};
+		led@5 {
+				reg = <5>;
+				label = "I2C_RST";
+				type = "GPIO";
+				active-high;
+				default-on;             /* or: keep-value */
+		};
+		led@6 {
+				reg = <6>;
+				label = "6-unused";
+				type = "LED";
+				active-low;
+		};
+		led@7 {
+				reg = <7>;
+				label = "TOUCH_ON";
+				type = "GPIO";
+				active-high;
+				default-on;
+		};
+    };
+#endif	/* DISPLAY_LVDS_BT070L1060CS0I1ADA */
+
 #ifdef CONFIG_PICOCOREMX6UL100_CAPTOUCH_TSC2004
 	pca963x: pca9632@60 {
 		compatible = "nxp,pca9632";
@@ -798,7 +918,17 @@ wvga {					\
 #else
  	pattern = <0>;
 #endif
+
+#ifdef DISPLAY_LVDS_BT070L1060CS0I1ADA
+	/* Use the lcd-supply regulator for the reset signal
+	 * because the mxc-fb infrastructure has no display
+	 * reset functionality and vlcd is used by the
+	 * pca pca9634
+	 */
+	lcd-supply = <&reg_rlcd>;
+#else
 	lcd-supply = <&reg_vlcd>;
+#endif
 	status = "okay";
 
 	display0: lcd {
