--- a/arch/arm/configs/fsimx6ul_defconfig
+++ b/arch/arm/configs/fsimx6ul_defconfig
@@ -303,6 +303,7 @@ CONFIG_TOUCHSCREEN_ST1633I=y
 CONFIG_TOUCHSCREEN_SX8654=y
 CONFIG_TOUCHSCREEN_IMX6UL_TSC=y
 CONFIG_TOUCHSCREEN_TSC2004=y
+CONFIG_TOUCHSCREEN_ILITEK=y
 # CONFIG_LEGACY_PTYS is not set
 # CONFIG_DEVKMEM is not set
 CONFIG_SERIAL_IMX=y
