--- a/arch/arm64/boot/dts/F+S/displays/imx93-BT070L1060CS0I1AD-A.dtsi
+++ b/arch/arm64/boot/dts/F+S/displays/imx93-BT070L1060CS0I1AD-A.dtsi
@@ -153,6 +153,6 @@
 		reg = <0x41>;
 		interrupt-parent = <&IMX93_TOUCH_INTERRUPT_GPIO_BANK>;
 		interrupts = <IMX93_TOUCH_INTERRUPT_GPIO_NUM IRQ_TYPE_EDGE_RISING>;
-		reset-gpios = <&gpio2 19 GPIO_ACTIVE_LOW>;
+		reset-gpios = <&gpio_adp 5 GPIO_ACTIVE_LOW>;
 	};
 };
