--- a/arch/arm64/boot/dts/F+S/Makefile
+++ b/arch/arm64/boot/dts/F+S/Makefile
@@ -1,4 +1,5 @@
 dtb-$(CONFIG_ARCH_MXC) += \
 		soldercore8ulp-bbhd.dtb \
 		picocoremx8ulp.dtb \
-		picocoremx8ulp-lcdif-adp-mipi2mipi1-ee0350et-2cp.dtb
+		picocoremx8ulp-adp-mipi2mipi1-ee0350et-2cp.dtb \
+		picocoremx8ulp-adp-mipi2lvds1-BT070L1060CS0I1AD-A.dtb
