--- a/arch/arm/configs/fsimx6_etnaviv_defconfig
+++ b/arch/arm/configs/fsimx6_etnaviv_defconfig
@@ -385,6 +385,7 @@ CONFIG_SND=y
 # CONFIG_SND_USB is not set
 CONFIG_SND_SOC=y
 CONFIG_SND_SOC_FSL_ASRC=y
+CONFIG_SND_SOC_FSL_SSI=y
 CONFIG_SND_SOC_FSL_ESAI=y
 CONFIG_SND_IMX_SOC=y
 CONFIG_SND_SOC_IMX_SGTL5000=y
