--- a/sound/soc/fsl/Kconfig
+++ b/sound/soc/fsl/Kconfig
@@ -308,15 +308,24 @@ config SND_SOC_IMX_ES8328
 
 config SND_SOC_IMX_SGTL5000
 	tristate "SoC Audio support for i.MX boards with sgtl5000"
-	depends on OF && I2C
+	depends on OF && I2C && (SND_SOC_FSL_SAI || SND_SOC_FSL_SSI)
 	select SND_SOC_SGTL5000
 	select SND_SOC_IMX_PCM_DMA
 	select SND_SOC_IMX_AUDMUX
-	select SND_SOC_FSL_SAI
-###	select SND_SOC_FSL_SSI
 	help
 	  Say Y if you want to add support for SoC audio on an i.MX board with
 	  a sgtl5000 codec.
+
+config SND_SOC_FSL_FUS_WM9715
+ 	tristate "SoC Audio support for i.MX boards with WM9715"
+ 	depends on OF
+	select SND_SOC_AC97_BUS
+ 	select SND_SOC_WM9712
+ 	select SND_SOC_IMX_AUDMUX
+ 	select SND_SOC_IMX_PCM_DMA
+ 	help
+ 	  Say Y if you want to add support for SoC audio on an i.MX board with
+ 	  a wm9715 codec.
 
 config SND_SOC_IMX_SPDIF
 	tristate "SoC Audio support for i.MX boards with S/PDIF"
