dts:F+S:picocoremx93: seperate TOUCH_I2C pinctrl
This allows to redefine the PADCTRL of TOUCH_I2C GPIOs.
Some I2C-Controller needs special configuratons, for Pull-Ups/Downs,
like gt928.

--- a/arch/arm64/boot/dts/F+S/displays/imx93-adp-lvds2lvds2-EE1010B1T-1CP.dtsi
+++ b/arch/arm64/boot/dts/F+S/displays/imx93-adp-lvds2lvds2-EE1010B1T-1CP.dtsi
@@ -153,3 +153,16 @@
                 reset-gpios = <&gpio_adp 5 GPIO_ACTIVE_LOW>;
         };
 };
+
+/delete-node/ &pinctrl_touch_i2c;
+
+&iomuxc {
+	pinctrl_touch_i2c: touchi2cgrp {
+		fsl,pins = <
+			/* I2C_B_IRQ */
+			MX93_PAD_GPIO_IO18__GPIO2_IO18		0x5fe
+			/* GPIO_J1_52, TOUCH_RESET  */
+			MX93_PAD_GPIO_IO19__GPIO2_IO19		0x3fe
+		>;
+	};
+};
