--- a/.gitignore
+++ b/.gitignore
@@ -108,6 +108,7 @@ modules.order
 /include/generated/
 /include/ksym/
 /arch/*/include/generated/
+/scripts/dtc/include-prefixes/fsversion.h
 
 # stgit generated dirs
 patches-*
